--- a/apps.json
+++ b/apps.json
@@ -2,7 +2,7 @@
   {
     "name" : "植物大战僵尸",
     "download" : "10311万",
-    "icon" : "http:\/\/p16.qhimg.com\/dr\/48_48_\/t0125e8d438ae9d2fbb.png"
+    "icon" : "http:\/\/p16.qhimg.com\/dr\/48_48_\/t01238ae9d2fbb.png"
   },
   {
     "name" : "捕鱼达人2",
